Fix spacing in CMS popup

--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -732,7 +732,7 @@
   color:#B28F64;
 }
 
-.content {
+.cerise-content {
   color:#B28F64;
   margin: 20% 5% 0 5%;
   .heading{
